force-app/main/default/objects/Inventory_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Inventory Line Items</relationshipLabel>
        <relationshipName>Inventory_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventory Line Items</relationshipLabel>
        <relationshipName>Inventory_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Inventory Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INVL-{0000}</displayFormat>
        <label>Inventory Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>